Init code base frontend (nextjs)
